<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTextResultActivity">

    <TextView
        android:id="@+id/text_result_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/text_detection_results_heading"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_result_heading">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_heading_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/in_english"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/textView_heading_braille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/in_braille"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_braille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>